--- a/ansible/roles/wordpress-builds/tasks/tekton.yml
+++ b/ansible/roles/wordpress-builds/tasks/tekton.yml
@@ -6,6 +6,7 @@
     - mirrors-vars.yml
     - s3-vars.yml
     - build-vars.yml
+    - continuous-integration-vars.yml
     - tekton-vars.yml
 
 - tags: always
