--- a/ansible/roles/wordpress-builds/vars/continuous-integration-vars.yml
+++ b/ansible/roles/wordpress-builds/vars/continuous-integration-vars.yml
@@ -11,3 +11,8 @@ wp_nginx_ci_flavors:
     fruit: '🍊'
   - name: alpha
   - name: rc
+
+# Provisioned by the OpenShift operator for running as UID 0 and
+# CAP_SETFCAP (which we couldn't do ourselves); see
+# https://docs.redhat.com/en/documentation/openshift_container_platform/4.8/html/cicd/pipelines#about-taskrun_understanding-openshift-pipelines
+wp_base_builder_buildah_service_account: pipeline
