[refactor] Eliminate `ansible/vars/runner-credentials.yml`
- Create another token that wields the union of the authorities that
  Ansible ops require
- Use it at the top level (i.e. `ansible/vars/quay-vars.yml` /
  `ansible/vars/quay-secrets.yml`), thereby severing the bogus
  top-level adherence to `runner-credentials.yml` in the former
- Load both of these vars files once and only once in
  `ansible/roles/wordpress-builds/tasks/main.yml` i.e. make
  `ansible_quay_bearer_token` work in an ambient fashion
- Ensure (and clarify in comments) that Ansible ops wield
  `ansible/vars/quay-vars.yml`, whereas Tekton uses
  `ansible/roles/wordpress-builds/vars/tekton-credentials.yml`
  at run time to enumerate existing tags

--- a/ansible/roles/olm-catalog/tasks/main.yml
+++ b/ansible/roles/olm-catalog/tasks/main.yml
@@ -9,6 +9,7 @@
     - catalog-vars.yml
     - ../../../vars/quay-vars.yml
 
+# Required for quay-vars.yml, above:
 - tags: always
   include_vars:
     file: ../../../vars/quay-secrets.yml
