--- a/ansible/roles/wordpress-builds/vars/tekton-credentials.yml
+++ b/ansible/roles/wordpress-builds/vars/tekton-credentials.yml
@@ -33,7 +33,7 @@ quay_api:
   #    the above instructions carefully. Sorry about that.
   # 5. Click the `tekton` hyperlink
   # 6. In the left sidebar, click Generate Token (pictured by a cinema ticket)
-  # 7. Check the “View all visible repositories” and “Read/Write to any accessible repositories” boxes and leave all others unchecked.
+  # 7. Check the “View all visible repositories” boxes and leave all others unchecked.
   # 8. Click the Generate Access Token button (green) at the bottom
   # 9. Click Authorize application
   # 10. A token should appear. If it doesn't, see 💡, above.
