--- a/ansible/roles/quay-consumer-namespace/tasks/quay-puller-robot-account.yml
+++ b/ansible/roles/quay-consumer-namespace/tasks/quay-puller-robot-account.yml
@@ -1,6 +1,7 @@
 - tags: always
   include_vars: ../../../vars/quay-vars.yml
 
+# Required for quay-vars.yml, above:
 - tags: always
   include_vars:
     file: ../../../vars/quay-secrets.yml
