[feature] Give wp-ci role to delete build pods

--- a/ansible/roles/wordpress-builds/tasks/continuous-integration.yml
+++ b/ansible/roles/wordpress-builds/tasks/continuous-integration.yml
@@ -190,6 +190,10 @@
           resources:
             - persistentvolumeclaims
           verbs: ['create', 'delete', 'deletecollection', 'patch', 'update', 'get', 'list', 'watch']
+        - apiGroups: [ '' ]
+          resources:
+            - pods
+          verbs: [ 'create', 'delete', 'deletecollection', 'patch', 'update', 'get', 'list', 'watch' ]
         - apiGroups: ['']
           resources:
             - secrets
