--- a/docker/wp-backup/Dockerfile
+++ b/docker/wp-backup/Dockerfile
@@ -1,8 +1,11 @@
-FROM quay-its.epfl.ch/svc0041/wp-cron:2025-041
+FROM quay-its.epfl.ch/svc0041/wp-cron:2025-274
+
+RUN apt-get -qy update
+RUN apt-get -qy install unzip
 
 RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" ; \
     unzip awscliv2.zip ; \
-    sudo ./aws/install
+    ./aws/install
 
 COPY wordpresssites-backup.sh /
 
