[fix] Add wp-ops to the repo list

--- a/ansible/roles/wordpress-builds/tasks/continuous-integration.yml
+++ b/ansible/roles/wordpress-builds/tasks/continuous-integration.yml
@@ -83,6 +83,7 @@
             - wp-plugin-epfl-translate
             - wp-plugin-epfl-menus
             - wp-plugin-pushgateway
+            - wp-ops          
           DEBUG: {{ _debug }}
           NAMESPACE: "svc0041t-wordpress"
   vars:
