--- a/ansible/roles/wordpress-namespace/tasks/backup-wordpresssites.yml
+++ b/ansible/roles/wordpress-namespace/tasks/backup-wordpresssites.yml
@@ -62,8 +62,8 @@
                 serviceAccountName: backup-wordpresssite
                 containers:
                   - name: backup-wordpresssite-cron
-                    image: "quay-its.epfl.ch/svc0041/wp-backup-wordpresssites:feature-wpsites-backup-001"
-                    imagePullPolicy: Always
+                    image: "{{ ansible_quay_hostname }}/{{ quay_organization }}/wp-s3:feature-wpsites-backup-014"
+                    imagePullPolicy: IfNotPresent
                     command: ["/bin/bash"]
                     args: ["/wordpresssites-backup.sh"]
                     resources:
