--- a/ansible/roles/wordpress-namespace/tasks/backup-wordpresssites.yml
+++ b/ansible/roles/wordpress-namespace/tasks/backup-wordpresssites.yml
@@ -62,7 +62,7 @@
                 serviceAccountName: backup-wordpresssite
                 containers:
                   - name: backup-wordpresssite-cron
-                    image: "quay-its.epfl.ch/svc0041/wp-backup-wordpresssites:feature-wpsites-backup-001"
+                    image: "{{ ansible_quay_hostname }}/{{ quay_organization }}/wp-s3:feature-wpsites-backup-002"
                     imagePullPolicy: IfNotPresent
                     command: ["/bin/bash"]
                     args: ["/wordpresssites-backup.sh"]
