[fix] More OpenResty mirroired image
In order to be able to test more recent image, the regex to mirror 
OpenResty image is more "open", getting all the "alping-fat" tags.

--- a/ansible/roles/wordpress-builds/tasks/mirrors.yml
+++ b/ansible/roles/wordpress-builds/tasks/mirrors.yml
@@ -26,4 +26,4 @@
   vars:
     mirror_name: openresty
     mirror_from: openresty/openresty
-    mirror_tags: ["1.27.1.1-3-alpine-fat"]
+    mirror_tags: ["1.27.*-alpine-fat", "alpine-fat"]
